<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10mm"
        android:layout_gravity="center"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#DCDCDC" >
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="15pt"
                android:prompt="@string/spinner_title">
                <requestFocus />
            </Spinner>
        </RelativeLayout>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:enabled="false">
        </EditText>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/editTextMobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_num" />

        <EditText
            android:id="@+id/editTextPwd1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pwd"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/editTextPwd2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pwd2"
            android:inputType="textPassword"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/txtViewMsg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textColor="@color/green"/>

            <Button
                android:id="@+id/btnCreateUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:text="Create User" />

            <Button
                android:id="@+id/btnHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="Back"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>