<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="7mm"
        android:layout_gravity="center"
        android:scrollbars="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="40mm"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:hint="@string/name">
                <requestFocus />
            </EditText>

            <ImageView
                android:id="@+id/speakTextName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:src="@android:drawable/ic_btn_speak_now" >
            </ImageView>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextAcctNo"
                android:layout_width="40mm"
                android:layout_height="wrap_content"
                android:hint="@string/account_num" />

            <ImageView
                android:id="@+id/speakTextAcctNo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:src="@android:drawable/ic_btn_speak_now" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextIFSC"
                android:layout_width="40mm"
                android:layout_height="wrap_content"
                android:hint="@string/IFSC" />

            <ImageView
                android:id="@+id/speakTextIFSC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:src="@android:drawable/ic_btn_speak_now" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextAadhar"
                android:layout_width="40mm"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/aadhar_num" />

            <ImageView
                android:id="@+id/speakTextAadhar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:src="@android:drawable/ic_btn_speak_now" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextMMID"
                android:layout_width="40mm"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/MMID" />

            <ImageView
                android:id="@+id/speakTextMMID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:src="@android:drawable/ic_btn_speak_now" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextUPIID"
                android:layout_width="40mm"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/UPI_ID" />

            <ImageView
                android:id="@+id/speakTextUPIID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:src="@android:drawable/ic_btn_speak_now" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="40mm"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_num" />

            <ImageView
                android:id="@+id/speakTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:src="@android:drawable/ic_btn_speak_now" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTxid"
                android:layout_width="40mm"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txid"
                android:enabled="false"
                />

            <ImageView
                android:id="@+id/speakTextTxID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:src="@android:drawable/ic_btn_speak_now" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextBill"
                android:layout_width="40mm"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/billno" />

            <ImageView
                android:id="@+id/speakTextBill"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:src="@android:drawable/ic_btn_speak_now" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnGenerateQR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_gravity="center"
                android:text="Create Image" />

            <Button
                android:id="@+id/btnHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:text="Home"
                android:layout_gravity="center"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>